--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
 		"eslint": "^9.38.0",
 		"eslint-config-prettier": "^10.1.8",
 		"eslint-plugin-svelte": "^3.12.4",
+		"flowbite": "^3.1.2",
+		"flowbite-svelte": "^1.27.0",
 		"globals": "^16.4.0",
 		"prettier": "^3.6.2",
 		"prettier-plugin-svelte": "^3.4.0",
