--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
 	"devDependencies": {
 		"@eslint/compat": "^1.4.0",
 		"@eslint/js": "^9.38.0",
-		"@inlang/paraglide-js": "^2.4.0",
 		"@sveltejs/adapter-auto": "^7.0.0",
 		"@sveltejs/kit": "^2.47.1",
 		"@sveltejs/vite-plugin-svelte": "^6.2.1",
@@ -32,5 +31,8 @@
 		"svelte": "^5.41.0",
 		"tailwindcss": "^4.1.14",
 		"vite": "^7.1.10"
+	},
+	"dependencies": {
+		"svelte-i18n": "^4.0.1"
 	}
 }
