--- a/package.json
+++ b/package.json
@@ -33,7 +33,6 @@
 		"vite": "^7.1.10"
 	},
 	"dependencies": {
-		"svelte-i18n": "^4.0.1",
-		"svelte-typewrite": "^3.0.0"
+		"svelte-i18n": "^4.0.1"
 	}
 }
